attempt to fix bleed

--- a/themes/sherpa/styles/_gradients.scss
+++ b/themes/sherpa/styles/_gradients.scss
@@ -25,7 +25,7 @@ $gradients: map-merge((
 }
 
 @mixin bg-gradient($gradientName) {
-  background: gradient($gradientName);
+  background-image: gradient($gradientName);
 }
 
 @mixin text-gradient($gradientName) {
