--- a/themes/sherpa/styles/_sections.sass
+++ b/themes/sherpa/styles/_sections.sass
@@ -219,7 +219,6 @@ section
     h1
       margin-top: 1em
     img#clients
-      box-shadow: inset 10px 10px $colour-black, inset -10px -10px $colour-black
       +bg-gradient-fade(rainbow)
     #quotes
       margin: 2rem auto
